force-app/main/default/objects/custom_create176__c/custom_create176__c.object-meta.xml
<CustomObject>
    <label>Custom created object176</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects176</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>