force-app/main/default/objects/custom_create176__c/fields/custom_create_176field511__c.field-meta.xml
<CustomField>
    <fullName>custom_create_176field511__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 176field511</label>
    <type>Checkbox</type>
</CustomField>