force-app/main/default/objects/custom_create176__c/fields/custom_create_176field551__c.field-meta.xml
<CustomField>
    <fullName>custom_create_176field551__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 176field551</label>
    <type>Checkbox</type>
</CustomField>